--- a/css/style.css
+++ b/css/style.css
@@ -2875,3 +2875,14 @@ p {
     #technology .technology-wrapper p {
       font-size: 15px;
       margin: 0 auto; }
+
+#testimonials {
+  background: url("../images/testimonials_background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+  width: 100%; }
+  #testimonials .carousel {
+    display: none; }
